modified github link

--- a/word_puzzle_blackboard/views/index.jade
+++ b/word_puzzle_blackboard/views/index.jade
@@ -10,7 +10,7 @@ block content
 		p blackboard
 		p author vishwajeet and sanjay
 		p github 
-			a(href='//github.com/gotik') gotik
+			a(href='https://github.com/vishwajeetkumar86/word_puzzle') gotik
 		article#alert.box_login
 		aritcle.box_login.drag
 			form#form(method='post')
